<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_popular"
            android:checked="true"
            android:orderInCategory="100"
            android:title="@string/menu_item_popular"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_toprated"
            android:orderInCategory="200"
            android:title="@string/menu_item_top_rated"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_favourites"
            android:orderInCategory="300"
            android:title="@string/favourites"
            app:showAsAction="never" />
    </group>
</menu>