<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.douglasharvey.popularmovies.ui.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/begin_left_guideline" />

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="0dp"
            android:layout_height="@dimen/backdrop_height"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/poster_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:maxHeight="@dimen/poster_max_height"
            android:maxWidth="@dimen/poster_max_width"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/movie_placeholder" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@android:style/TextAppearance.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster"
            tools:text="Title" />

        <View
            android:id="@+id/first_horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/iv_poster" />

        <TextView
            android:id="@+id/tv_release_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:text="@string/release_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/first_horizontal_divider" />

        <TextView
            android:id="@+id/tv_release_date_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_header_data"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_header"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date_header"
            tools:text="22/02/2018" />

        <TextView
            android:id="@+id/tv_vote_average_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:text="@string/vote_average"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date_header" />

        <TextView
            android:id="@+id/tv_vote_average_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_between_header_data"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_average_header"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_average_header"
            tools:text="5.0" />


        <TextView
            android:id="@+id/tv_overview_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:text="@string/synopsis"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_header" />

        <TextView
            android:id="@+id/tv_synopsis_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_header"
            tools:text="This is the plot summary" />

        <View
            android:id="@+id/second_horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_synopsis_data" />

        <TextView
            android:id="@+id/tv_trailers_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:text="@string/trailers"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/second_horizontal_divider" />

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rv_list_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_trailers_header"
            tools:listitem="@layout/list_item_videos" />

        <View
            android:id="@+id/third_horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/rv_list_videos" />

        <TextView
            android:id="@+id/tv_reviews_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_between_views"
            android:layout_marginTop="@dimen/vertical_margin_between_views"
            android:text="@string/reviews"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/third_horizontal_divider" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/trailer_card_view_corner_radius"
            card_view:cardElevation="@dimen/trailer_card_view_elevation"
            card_view:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_header"
            >

            <TextView
                android:id="@+id/tv_reviews_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_between_views"
                android:layout_marginTop="@dimen/vertical_margin_between_views"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="The minions are a nice idea and the animation and London recreation is really good, but that's about it. The script is boring and the jokes not really funny. This is the 4th sentence."
                android:textSize="@dimen/card_view_video_name_text_size"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:text="Review data" />
        </android.support.v7.widget.CardView>

        <android.support.constraint.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/begin_right_guideline" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>